--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,8 @@
     <button (click)="drawer.toggle()" mat-icon-button>
         <mat-icon>menu</mat-icon>
     </button>
-    <span>Suíno Software</span>
+    <!-- <span>Suíno Software</span> -->
+    <img src="assets/img/marca.png" width="15%">
     <span class="example-spacer"></span>
     <button routerLink="" mat-button>Home</button>
     <button [matMenuTriggerFor]="opcUsuario" mat-button>Usuário</button>
