Form Cadastro suino + layout padrão

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<br>
-<br>
-<img src="assets/img/logo.png" width="15%">
-<h1>Bem-vindo ao Suíno Software</h1>
-<h2>Sistema de gestão de suínos</h2>
+<div class="text-center pt-5">
+    <img src="assets/img/logo.png" width="15%">
+    <h1>Bem-vindo ao Suíno Software</h1>
+    <h2>Sistema de gestão de suínos</h2>
+</div>
