--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,9 @@
 .example-spacer {
-    flex: 1 1 auto;
-  }
+  flex: 1 1 auto;
+}
+.conteudo {
+  min-height: 81.8vh;
+  position: relative;
+  margin: 0;
+  box-sizing: border-box;
+}
