Tabela listando todos os suínos cadastrados no banco

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
             </mat-expansion-panel-header>
             <mat-nav-list>
                 <button routerLink="cadastrarSuino" mat-button><mat-icon>add</mat-icon> Incluir</button><br>
-                <button mat-button><mat-icon>list</mat-icon>Listar</button>
+                <button routerLink="listarSuinos" mat-button><mat-icon>list</mat-icon>Listar</button>
             </mat-nav-list>
         </mat-expansion-panel>
         <!-- <mat-list-item>
