--- a/src/app/listagem-suinos/listagem-suinos.component.html
+++ b/src/app/listagem-suinos/listagem-suinos.component.html
@@ -1,9 +1,6 @@
 <h2>Lista de Suínos</h2>
+<br>
 <table mat-table [dataSource]="listaSuinos" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let pig">{{ pig.id }}</td>
-    </ng-container>
     <ng-container matColumnDef="brincoAnimal">
         <th mat-header-cell *matHeaderCellDef>Brinco</th>
         <td mat-cell *matCellDef="let pig">{{ pig.brincoAnimal }}</td>
@@ -13,13 +10,13 @@
         <td mat-cell *matCellDef="let pig">{{ pig.brincoPai }}</td>
     </ng-container>
     <ng-container matColumnDef="brincoMae">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let pig">{{ pig.id }}</td>
+        <th mat-header-cell *matHeaderCellDef>Brinco Mãe</th>
+        <td mat-cell *matCellDef="let pig">{{ pig.brincoMae }}</td>
     </ng-container>
     <ng-container matColumnDef="dataNascimento">
-        <th mat-header-cell *matHeaderCellDef>Nascimentoth>
+        <th mat-header-cell *matHeaderCellDef>Nascimento</th>
         <td mat-cell *matCellDef="let pig">{{ pig.dataNascimento }}</td>
-    </ng-container> 
+    </ng-container>
     <ng-container matColumnDef="dataSaida">
         <th mat-header-cell *matHeaderCellDef>Saída</th>
         <td mat-cell *matCellDef="let pig">{{ pig.dataSaida }}</td>
@@ -32,4 +29,7 @@
         <th mat-header-cell *matHeaderCellDef>Sexo</th>
         <td mat-cell *matCellDef="let pig">{{ pig.sexo }}</td>
     </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
