--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <button routerLink="" mat-menu-item>Sair</button>
     </mat-menu>
 </mat-toolbar>
-<mat-drawer-container autosize>
+<mat-drawer-container style="min-height: 100%;">
     <mat-drawer #drawer opened="true" mode="side" position="start">
     <mat-nav-list>
         <mat-list-item>
@@ -30,8 +30,8 @@
         </mat-list-item> -->
     </mat-nav-list>
     </mat-drawer>
-    <mat-drawer-content>
-        <div class="m-4 conteudo">
+    <mat-drawer-content class="conteudo">
+        <div class="m-4">
             <router-outlet></router-outlet>
         </div>
     </mat-drawer-content>
