--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
-html, body { height: 100%; }
+html, body { 
+    height: 100%;
+    background-color: #fafafa;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+footer {
+    position:absolute;
+    bottom:0;
+    width: 100%;
+}
