Edição de suíno

--- a/src/app/cadastro-peso/cadastro-peso.component.html
+++ b/src/app/cadastro-peso/cadastro-peso.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="pesoForm" (ngSubmit)="submitPeso()">
+<!-- <form [formGroup]="pesoForm" (ngSubmit)="submitPeso()">
     <label for="brincoAnimal">Brinco do Animal:</label>
     <select formControlName="brincoAnimal">
       <option *ngFor="let animal of animais" [value]="animal.brinco">{{ animal.brinco }}</option>
@@ -11,5 +11,5 @@
     <input type="number" formControlName="peso">
     
     <button type="submit" [disabled]="pesoForm.invalid">Cadastrar</button>
-  </form>
+  </form> -->
   
