--- a/src/app/controle-peso/controle-peso.component.html
+++ b/src/app/controle-peso/controle-peso.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="pesos.length > 0">
+<!-- <div *ngIf="pesos.length > 0">
     <canvas id="pesoChart"></canvas>
   </div>
   <div *ngIf="pesos.length === 0">
     <p>Nenhum dado de peso disponível.</p>
   </div>
-  
+   -->
