--- a/src/app/listagem-suinos/listagem-suinos.component.html
+++ b/src/app/listagem-suinos/listagem-suinos.component.html
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let pig">
-            <button mat-icon-button color="primary" routerLink="editar/{{pig.id}}"><mat-icon>edit</mat-icon></button>
+            <button mat-icon-button color="primary" routerLink="/editarSuino/{{pig.id}}"><mat-icon>edit</mat-icon></button>
             <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
         </td>
     </ng-container>
