--- a/src/app/cadastro-peso/cadastro-peso.component.html
+++ b/src/app/cadastro-peso/cadastro-peso.component.html
@@ -13,3 +13,45 @@
     <button type="submit" [disabled]="pesoForm.invalid">Cadastrar</button>
   </form> -->
   
+<form [formGroup]="pesoForm" (ngSubmit)="submitPeso()">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Cadastro de Peso</mat-card-title>
+    </mat-card-header>
+    <br>
+    <mat-card-content>
+      <div class="form-row justify-content-evenly">
+        <div class="mr-3">
+          <mat-form-field>
+            <mat-label>Brinco do animal</mat-label>
+            <mat-select id="brincoAnimal" formControlName="brincoAnimal">
+              @for(suino of suinos; track suino) {
+                <mat-option [value]="suino.brincoAnimal">{{suino.brincoAnimal}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="mr-3">
+          <mat-form-field>
+            <mat-label>Escolha uma data</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="dataPesagem" id="picker">
+            <mat-hint>dd/MM/yyyy</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="mr-3">
+          <mat-form-field>
+            <mat-label>Peso em Kg</mat-label>
+            <input type="text" matInput placeholder="Ex: 80" formControlName="peso" id="peso">
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-card-content>
+    <br>
+    <mat-card-actions>
+      <button mat-button type="submit">SALVAR</button>
+      <button mat-button routerLink="home">VOLTAR</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
