--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,6 +26,15 @@
                 <button routerLink="listarSuinos" mat-button><mat-icon>list</mat-icon>Listar</button>
             </mat-nav-list>
         </mat-expansion-panel>
+        <mat-expansion-panel [class.mat-elevation-z0]="true">
+            <mat-expansion-panel-header>
+                <mat-icon inline="true">balance</mat-icon>&nbsp; Pesos
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+                <button routerLink="pesos/cadastrar" mat-button><mat-icon>add</mat-icon> Cadastrar</button><br>
+                <button routerLink="pesos/consultar" mat-button><mat-icon>search</mat-icon>Consultar</button>
+            </mat-nav-list>
+        </mat-expansion-panel>
         <!-- <mat-list-item>
             <button routerLink="#" mat-button><mat-icon>savings</mat-icon> Teste</button>
         </mat-list-item> -->
