--- a/src/app/listagem-suinos/listagem-suinos.component.html
+++ b/src/app/listagem-suinos/listagem-suinos.component.html
@@ -15,11 +15,11 @@
     </ng-container>
     <ng-container matColumnDef="dataNascimento">
         <th mat-header-cell *matHeaderCellDef>Nascimento</th>
-        <td mat-cell *matCellDef="let pig">{{ pig.dataNascimento }}</td>
+        <td mat-cell *matCellDef="let pig">{{ pig.dataNascimento | date:'dd/MM/yyyy'}}</td>
     </ng-container>
     <ng-container matColumnDef="dataSaida">
         <th mat-header-cell *matHeaderCellDef>Saída</th>
-        <td mat-cell *matCellDef="let pig">{{ pig.dataSaida }}</td>
+        <td mat-cell *matCellDef="let pig">{{ pig.dataSaida | date:'dd/MM/yyyy'}}</td>
     </ng-container>
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let pig">
-            <button mat-icon-button color="primary" routerLink="/editarSuino/{{pig.id}}"><mat-icon>edit</mat-icon></button>
+            <button mat-icon-button color="primary" [routerLink]="['/suino-software/editar-suino', pig.id]"><mat-icon>edit</mat-icon></button>
             <button mat-icon-button color="warn" (click)="excluirSuino(pig.id)"><mat-icon>delete</mat-icon></button>
         </td>
     </ng-container>
