--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,8 +28,8 @@
                 <mat-icon inline="true">balance</mat-icon>&nbsp; Pesos
             </mat-expansion-panel-header>
             <mat-nav-list>
-                <button routerLink="pesos/cadastrar" mat-button><mat-icon>add</mat-icon> Cadastrar</button><br>
-                <button routerLink="pesos/consultar" mat-button><mat-icon>search</mat-icon>Consultar</button>
+                <button routerLink="cadastrar-pesos" mat-button><mat-icon>add</mat-icon> Cadastrar</button><br>
+                <button routerLink="consultar-pesos" mat-button><mat-icon>search</mat-icon>Consultar</button>
             </mat-nav-list>
         </mat-expansion-panel>
     </mat-nav-list>
