--- a/src/app/cadastro-peso/cadastro-peso.component.html
+++ b/src/app/cadastro-peso/cadastro-peso.component.html
@@ -50,8 +50,8 @@
     </mat-card-content>
     <br>
     <mat-card-actions>
-      <button mat-button type="submit">SALVAR</button>
-      <button mat-button routerLink="home">VOLTAR</button>
+        <button mat-button type="submit">SALVAR</button>
+        <button mat-button routerLink="/suino-software/home">VOLTAR</button>
     </mat-card-actions>
   </mat-card>
 </form>
