--- a/src/app/cadastro-suino/cadastro-suino.component.html
+++ b/src/app/cadastro-suino/cadastro-suino.component.html
@@ -65,7 +65,7 @@
         <br>
         <mat-card-actions>
             <button mat-button type="submit">SALVAR</button>
-            <button mat-button routerLink="/suino-software/listar-suinos">VOLTAR</button>
+            <button mat-button routerLink="/suino-software/home">VOLTAR</button>
         </mat-card-actions>
     </mat-card>
 </form>
