--- a/src/app/controle-peso/controle-peso.component.html
+++ b/src/app/controle-peso/controle-peso.component.html
@@ -1,10 +1,3 @@
-<!-- <div *ngIf="pesos.length > 0">
-    <canvas id="pesoChart"></canvas>
-  </div>
-  <div *ngIf="pesos.length === 0">
-    <p>Nenhum dado de peso disponível.</p>
-  </div>
-   -->
 <form [formGroup]="formPeso" (ngSubmit)="submitBrinco()">
   <mat-card>
     <mat-card-header>
@@ -25,12 +18,13 @@
       <button mat-button type="submit">CONSULTAR</button>
     </mat-card-actions>
   </mat-card>
+  <br>
 </form>
 
 <mat-card *ngIf="pesosAnimal.length">
   <mat-tab-group>
     <mat-tab label="Gráfico">
-      <canvas id="grafico">{{ chart }}</canvas>
+      <canvas #pesoChart width="1200" height="350"></canvas>
     </mat-tab>
     <mat-tab label="Tabela">
       <table mat-table [dataSource]="pesosAnimal" class="mat-elevation-z8">
@@ -58,4 +52,5 @@
     </table>
     </mat-tab>
   </mat-tab-group>
+  <br>
 </mat-card>
