--- a/src/app/editar-peso/editar-peso.component.html
+++ b/src/app/editar-peso/editar-peso.component.html
@@ -32,7 +32,7 @@
       <br>
       <mat-card-actions>
         <button mat-button type="submit">SALVAR</button>
-        <button mat-button routerLink="home">VOLTAR</button>
-      </mat-card-actions>
+        <button mat-button routerLink="/suino-software/listar-suinos">VOLTAR</button>
+    </mat-card-actions>
     </mat-card>
   </form>
