--- a/src/app/cadastro-sessao/cadastro-sessao.component.html
+++ b/src/app/cadastro-sessao/cadastro-sessao.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="formGroup">
     <mat-card>
         <mat-card-header>
             <mat-card-title>Cadastro de Sessão</mat-card-title>
@@ -9,31 +9,74 @@
                 <div class="form-group col-md-3">
                     <mat-form-field class="w-100">
                         <mat-label>Data</mat-label>
-                        <input matInput [matDatepicker]="picker">
+                        <input matInput [matDatepicker]="picker" readonly formControlName="dataSessao">
                         <mat-hint>dd/MM/yyyy</mat-hint>
                         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
+                    <span *ngIf="formGroup.get('dataSessao')?.errors && formGroup.get('dataSessao')?.touched" class="text-danger">
+                        A data é obrigatória
+                    </span>
                 </div>
                 <div class="form-group col-md-4">
                     <mat-form-field class="w-100">
                         <mat-label>Brincos</mat-label>
-                        <mat-select multiple>
+                        <mat-select multiple formControlName="brincos">
                             <div *ngFor="let pig of pigs">
                                 <mat-option [value]="pig">{{pig.brincoAnimal}}</mat-option>
                             </div>
                         </mat-select>
                     </mat-form-field>
+                    <span *ngIf="formGroup.get('brincos')?.errors && formGroup.get('brincos')?.touched" class="text-danger">
+                        Selecione os brincos que vão participar da sessão
+                    </span>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <mat-form-field class="w-100">
-                        <mat-label>Descrissão</mat-label>
-                        <textarea type="text" matInput placeholder="Digite uma descrissão" id="descrissao"></textarea>
+                        <mat-label>Descrição</mat-label>
+                        <textarea type="text" matInput placeholder="Digite uma descrição" id="descricao" formControlName="descricao"></textarea>
                     </mat-form-field>
+                    <span *ngIf="formGroup.get('descricao')?.errors && formGroup.get('descricao')?.touched" class="text-danger">
+                        A descrição é obrigatória
+                    </span>
                 </div>
             </div>
+            <hr>
+            <h6>Atividades da Sessão</h6>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <mat-form-field class="w-100">
+                        <mat-label>Atividade</mat-label>
+                        <input type="text" placeholder="Nome da atividade" matInput [(ngModel)]="nomeAtividade" [ngModelOptions]="{standalone: true}">
+                    </mat-form-field>
+                </div>
+                <button mat-button (click)="adicionarAtividade()" [disabled]="formGroup.get('dataSessao')?.errors 
+                || formGroup.get('brincos')?.errors 
+                || formGroup.get('descricao')?.errors
+                || !nomeAtividade">
+                    Adicionar
+                </button>
+            </div>
+            <div class="row" *ngIf="atividades.length">
+                <table mat-table [dataSource]="atividades" class="mat-elevation-z8">
+                    <ng-container matColumnDef="nome">
+                        <th mat-header-cell *matHeaderCellDef>Atividade</th>
+                        <td mat-cell *matCellDef="let atividade">{{ atividade.nome }}</td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
         </mat-card-content>
+        <mat-card-actions>
+            <button mat-button type="submit" [disabled]="formGroup.get('dataSessao')?.errors 
+            || formGroup.get('brincos')?.errors 
+            || formGroup.get('descricao')?.errors
+            || atividades.length == 0" >SALVAR</button>
+            <button mat-button routerLink="/suino-software/home">VOLTAR</button>
+        </mat-card-actions>
     </mat-card>
 </form>
