Botão para excluir atividade da sessão no momemento da criação da sessão.

--- a/src/app/cadastro-sessao/cadastro-sessao.component.html
+++ b/src/app/cadastro-sessao/cadastro-sessao.component.html
@@ -72,7 +72,7 @@
                         <tr *ngFor="let atividade of atividades">
                             <td>{{ atividade.nome }}</td>
                             <td *ngFor="let suino of suinosSelecionados"><mat-checkbox></mat-checkbox></td>
-                            <td><button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button></td>
+                            <td><button mat-icon-button color="warn" (click)="removerAtividade(atividade)"><mat-icon>delete</mat-icon></button></td>
                         </tr>
                     </tbody>
                 </table>
