--- a/src/app/listagem-sessoes/listagem-sessoes.component.html
+++ b/src/app/listagem-sessoes/listagem-sessoes.component.html
@@ -12,7 +12,7 @@
     <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let sessao">
-            <button mat-icon-button color="primary"><mat-icon>info</mat-icon></button>
+            <button mat-icon-button color="primary" [routerLink]="['/suino-software/detalhes-sessao', sessao.id]"><mat-icon>info</mat-icon></button>
         </td>
     </ng-container>
 
