Reorganização das rotas por módulo

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,8 +19,8 @@
                 <mat-icon inline="true">savings</mat-icon>&nbsp; Suínos
             </mat-expansion-panel-header>
             <mat-nav-list>
-                <button routerLink="cadastrar-suino" mat-button><mat-icon>add</mat-icon> Incluir</button><br>
-                <button routerLink="listar-suinos" mat-button><mat-icon>list</mat-icon>Listar</button>
+                <button routerLink="suinos/cadastrar" mat-button><mat-icon>add</mat-icon> Incluir</button><br>
+                <button routerLink="suinos/listar" mat-button><mat-icon>list</mat-icon>Listar</button>
             </mat-nav-list>
         </mat-expansion-panel>
         <mat-expansion-panel [class.mat-elevation-z0]="true">
@@ -28,8 +28,8 @@
                 <mat-icon inline="true">balance</mat-icon>&nbsp; Pesos
             </mat-expansion-panel-header>
             <mat-nav-list>
-                <button routerLink="cadastrar-pesos" mat-button><mat-icon>add</mat-icon> Cadastrar</button><br>
-                <button routerLink="consultar-pesos" mat-button><mat-icon>search</mat-icon>Consultar</button>
+                <button routerLink="pesos/cadastrar" mat-button><mat-icon>add</mat-icon> Cadastrar</button><br>
+                <button routerLink="pesos/consultar" mat-button><mat-icon>search</mat-icon>Consultar</button>
             </mat-nav-list>
         </mat-expansion-panel>
         <mat-expansion-panel [class.mat-elevation-z0]="true">
@@ -37,8 +37,8 @@
                 <mat-icon inline="true">monitor_heart</mat-icon>&nbsp; Sessões
             </mat-expansion-panel-header>
             <mat-nav-list>
-                <button routerLink="cadastrar-sessao" mat-button><mat-icon>add</mat-icon> Incluir</button><br>
-                <button routerLink="listar-sessoes" mat-button><mat-icon>list</mat-icon>Listar</button>
+                <button routerLink="sessoes/cadastrar" mat-button><mat-icon>add</mat-icon> Incluir</button><br>
+                <button routerLink="sessoes/listar" mat-button><mat-icon>list</mat-icon>Listar</button>
             </mat-nav-list>
         </mat-expansion-panel>
     </mat-nav-list>
